# figma-cli

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
scripts/: bump-version.sh
skills/figma/: SKILL.md
skills/figma/references/: comments.md  design-system.md  export.md  implement.md  inspect.md
src/: main.rs
src/api/: client.rs  mod.rs  types.rs
src/api/endpoints/: comments.rs  components.rs  files.rs  mod.rs  projects.rs  users.rs  versions.rs
src/auth/: config.rs  mod.rs  oauth.rs  pat.rs
src/cli/: auth.rs  comments.rs  components.rs  file.rs  install.rs  mod.rs  projects.rs  styles.rs  user.rs  versions.rs
src/utils/: mod.rs  output.rs  url_parser.rs
