[package]
name = "fcli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with Figma through the REST API"

[[bin]]
name = "fcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "3"
open = "5"
dirs = "6"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
url = "2"
comfy-table = "7"
chrono = "0.4"
rpassword = "7"
dialoguer = "0.11"

[dev-dependencies]
mockito = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
